Add value to update input

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
             <div id="upd" >
                 <form action="/update/<%=element.id %>" method="post">
                     <button type="submit">Update</button>
-                    <input type="text" id="task_update" name="task_update"><%=element.task_name %></input>
+                    <input type="text" id="task_update" name="task_update" value="<%=element.task_name %>">
                 </form>
             </div>
             
